<resources>
    <string name="app_name">VangtiChai</string>
    <string name="taka">Taka :</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="__1">1 :</string>
    <string name="__2">2 :</string>
    <string name="__5">5 :</string>
    <string name="_10">10 :</string>
    <string name="_20">20 :</string>
    <string name="_50">50 :</string>
    <string name="_100">100 :</string>
    <string name="_500">500 :</string>


</resources>